--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,7 @@
     <title>Wyszukiwarka adresów ePUAP</title>
 
     <link rel="stylesheet" href="../static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="../static/css/footer.css">
 
     <script src="static/scripts.js"></script>
 </head>
@@ -43,7 +44,6 @@
                 <tbody id="t"></tbody>
             </table>
         </div>
-
     </div>
 
     <script>
@@ -55,4 +55,12 @@
         });
     </script>
 </body>
+    <footer class="footer">
+        <div class="container">
+            <span class="text-secondary">
+                ©2018: Tomasz Taraś;
+                <a href="https://github.com/ttomasz/wyszukiwarka-skrytek-epuap" class="text-secondary">Project available on github</a>
+            </span>
+        </div>
+    </footer>
 </html>
